Various fixes and improvements
- Ensure there is a tooltip hint explaining why users can't vote on unseen topics
- Ensure the vote control within a topic updates when a user runs out of votes after voting from the topic list
- Fix a couple of other edge cases with the tooltip hints
- Run prettier on js and scss files

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -3,3 +3,4 @@ en:
   user_no_vote: 'Select to vote for this topic.'
   closed: 'This topic is closed. Voting is no longer allowed.'
   out_of_votes: 'You are out of votes. Remove an existing vote then try again.'
+  must_view_first: 'You must view this topic before you can vote.'
